<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pawe.firstdb.AddUserActivity"
    android:background="#222627">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:textSize="24sp"
        android:onClick="continueClick"
        android:id="@+id/button_addUser"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="2dp"
        android:background="#3da282"
        android:textColor="#FFF"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:orientation="horizontal"
    android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/name"
            android:gravity="left|center"
            android:textColor="#fff"
            android:textAllCaps="true"
            android:layout_margin="3dp" />

        <EditText
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:hint="@string/inputName"
        android:id="@+id/editTextName"
        android:inputType="textPersonName"
        android:maxLength="35"
        android:textSize="13dp"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:textColorHighlight="#FFF"
        android:textColorHint="#DDD" />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/surname"
                android:gravity="left|center"
                android:textColor="#fff"
                android:textAllCaps="true"
                android:layout_margin="3dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/inputSurname"
                android:id="@+id/editTextSurname"
                android:inputType="textPersonName"
                android:maxLength="35"
                android:textSize="13dp"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:textColorHighlight="#FFF"
                android:textColorHint="#DDD" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/date"
                android:gravity="left|center"
                android:textColor="#fff"
                android:textAllCaps="true"
                android:layout_margin="3dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/inputDate"
                android:id="@+id/editTextDate"
                android:inputType="none"
                android:maxLength="35"
                android:textSize="13dp"
                android:onClick="dateOnClick"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:textColorHighlight="#FFF"
                android:textColorHint="#DDD"
                android:editable="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
