<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sum_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pawe.firstdb.SummaryActivity"
    android:background="#222627">

    <TextView
        android:hint="@string/name"
        android:id="@+id/sumUp_textView_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:textColorHighlight="#FFF"
        android:textColorHint="#FFF"
        android:layout_margin="5dp"
        android:gravity="center_horizontal" />
    <TextView
        android:hint="@string/surname"
        android:id="@+id/sumUp_textView_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sumUp_textView_firstName"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:textColorHighlight="#FFF"
        android:textColorHint="#FFF"
        android:layout_margin="5dp"
        android:gravity="center_horizontal" />
    <TextView
        android:hint="@string/date"
        android:id="@+id/sumUp_textView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sumUp_textView_lastName"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:textColorHighlight="#FFF"
        android:textColorHint="#FFF"
        android:layout_margin="5dp"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sumUp_textView_date"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_above="@+id/linearLayout">
        <ImageView
            android:id="@+id/sumUP_imageView_showCapturedImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:layout_margin="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="cancelOnClick"
            android:scaleType="fitCenter"
            android:text="@string/exit"
            android:background="#3da282"
            android:layout_margin="8dp"
            android:textColor="#FFF" />
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="addToDatabaseOnClick"
            android:scaleType="fitCenter"
            android:text="@string/save"
            android:background="#3da282"
            android:layout_margin="8dp"
            android:textColor="#FFF" />
    </LinearLayout>

</RelativeLayout>
